# routes/api.php
@@ -14,11 +14,13 @@ Route::middleware([ApplicationMiddleware::class])->group(function () {
     Route::prefix('v1')->group(function () {
         Route::post('/login', [TuiterApiController::class, 'login'])->name('me.login');
         Route::post('/users', [TuiterApiController::class, 'createUser'])->name('user.create');
-        Route::get('/me/feed', [TuiterApiController::class, 'feed'])->name('me.feed');
         Route::get('/me/profile', [TuiterApiController::class, 'profile'])->name('me.profile.show');
         Route::put('/me/profile', [TuiterApiController::class, 'updateProfile'])->name('me.profile.update');
+        Route::get('/me/feed', [TuiterApiController::class, 'feed'])->name('me.feed');
         Route::post('/me/tuits', [TuiterApiController::class, 'createTuit'])->name('tuits.create');
         Route::get('/me/tuits/{tuit_id}', [TuiterApiController::class, 'showTuit'])->name('tuits.show');
+        Route::get('/me/tuits/{tuit_id}/replies', [TuiterApiController::class, 'tuitReplies'])->name('tuits.replies.show');
+        Route::post('/me/tuits/{tuit_id}/replies', [TuiterApiController::class, 'createReply'])->name('tuits.replies.create');
         Route::post('/me/tuits/{tuit_id}/likes', [TuiterApiController::class, 'addLike'])->name('tuits.likes.add');
         Route::delete('/me/tuits/{tuit_id}/likes', [TuiterApiController::class, 'removeLike'])->name('tuits.likes.delete');
     });
